--- a/public/css/app.css
+++ b/public/css/app.css
@@ -804,6 +804,21 @@ select {
 .top-0 {
 	top: 0px;
 }
+.bottom-0 {
+	bottom: 0px;
+}
+.top-1 {
+	top: 0.25rem;
+}
+.right-1 {
+	right: 0.25rem;
+}
+.top-2 {
+	top: 0.5rem;
+}
+.right-2 {
+	right: 0.5rem;
+}
 .z-0 {
 	z-index: 0;
 }
@@ -814,6 +829,10 @@ select {
 	margin-left: auto;
 	margin-right: auto;
 }
+.my-2 {
+	margin-top: 0.5rem;
+	margin-bottom: 0.5rem;
+}
 .ml-3 {
 	margin-left: 0.75rem;
 }
@@ -823,6 +842,15 @@ select {
 .mt-2 {
 	margin-top: 0.5rem;
 }
+.mb-4 {
+	margin-bottom: 1rem;
+}
+.mt-1 {
+	margin-top: 0.25rem;
+}
+.mt-4 {
+	margin-top: 1rem;
+}
 .ml-1 {
 	margin-left: 0.25rem;
 }
@@ -831,9 +859,6 @@ select {
 }
 .ml-2 {
 	margin-left: 0.5rem;
-}
-.mt-4 {
-	margin-top: 1rem;
 }
 .ml-4 {
 	margin-left: 1rem;
@@ -847,11 +872,11 @@ select {
 .-mt-px {
 	margin-top: -1px;
 }
-.mb-4 {
-	margin-bottom: 1rem;
+.mb-2 {
+	margin-bottom: 0.5rem;
 }
-.mt-1 {
-	margin-top: 0.25rem;
+.mt-5 {
+	margin-top: 1.25rem;
 }
 .mt-6 {
 	margin-top: 1.5rem;
@@ -859,23 +884,32 @@ select {
 .mt-3 {
 	margin-top: 0.75rem;
 }
+.mb-3 {
+	margin-bottom: 0.75rem;
+}
 .-mr-2 {
 	margin-right: -0.5rem;
 }
-.mb-2 {
-	margin-bottom: 0.5rem;
+.mr-4 {
+	margin-right: 1rem;
 }
-.mt-5 {
-	margin-top: 1.25rem;
+.mr-3 {
+	margin-right: 0.75rem;
 }
 .block {
 	display: block;
+}
+.inline-block {
+	display: inline-block;
 }
 .flex {
 	display: flex;
 }
 .inline-flex {
 	display: inline-flex;
+}
+.table {
+	display: table;
 }
 .grid {
 	display: grid;
@@ -886,14 +920,17 @@ select {
 .h-5 {
 	height: 1.25rem;
 }
+.h-20 {
+	height: 5rem;
+}
 .h-8 {
 	height: 2rem;
 }
 .h-16 {
 	height: 4rem;
 }
-.h-20 {
-	height: 5rem;
+.h-\[32px\] {
+	height: 32px;
 }
 .h-10 {
 	height: 2.5rem;
@@ -913,17 +950,20 @@ select {
 .w-48 {
 	width: 12rem;
 }
+.w-20 {
+	width: 5rem;
+}
+.w-full {
+	width: 100%;
+}
 .w-8 {
 	width: 2rem;
 }
 .w-auto {
 	width: auto;
 }
-.w-20 {
-	width: 5rem;
-}
-.w-full {
-	width: 100%;
+.w-\[32px\] {
+	width: 32px;
 }
 .w-4 {
 	width: 1rem;
@@ -939,6 +979,9 @@ select {
 }
 .max-w-xl {
 	max-width: 36rem;
+}
+.max-w-5xl {
+	max-width: 64rem;
 }
 .flex-1 {
 	flex: 1 1 0%;
@@ -971,14 +1014,28 @@ select {
 .cursor-default {
 	cursor: default;
 }
+.cursor-pointer {
+	cursor: pointer;
+}
 .list-inside {
 	list-style-position: inside;
 }
 .list-disc {
 	list-style-type: disc;
 }
+.appearance-none {
+	-webkit-appearance: none;
+	   -moz-appearance: none;
+	        appearance: none;
+}
 .grid-cols-1 {
 	grid-template-columns: repeat(1, minmax(0, 1fr));
+}
+.grid-cols-3 {
+	grid-template-columns: repeat(3, minmax(0, 1fr));
+}
+.flex-row {
+	flex-direction: row;
 }
 .flex-col {
 	flex-direction: column;
@@ -995,6 +1052,17 @@ select {
 .justify-between {
 	justify-content: space-between;
 }
+.gap-2 {
+	gap: 0.5rem;
+}
+.gap-4 {
+	gap: 1rem;
+}
+.space-y-5 > :not([hidden]) ~ :not([hidden]) {
+	--tw-space-y-reverse: 0;
+	margin-top: calc(1.25rem * calc(1 - var(--tw-space-y-reverse)));
+	margin-bottom: calc(1.25rem * var(--tw-space-y-reverse));
+}
 .space-x-8 > :not([hidden]) ~ :not([hidden]) {
 	--tw-space-x-reverse: 0;
 	margin-right: calc(2rem * var(--tw-space-x-reverse));
@@ -1005,14 +1073,25 @@ select {
 	margin-top: calc(0.25rem * calc(1 - var(--tw-space-y-reverse)));
 	margin-bottom: calc(0.25rem * var(--tw-space-y-reverse));
 }
+.space-x-2 > :not([hidden]) ~ :not([hidden]) {
+	--tw-space-x-reverse: 0;
+	margin-right: calc(0.5rem * var(--tw-space-x-reverse));
+	margin-left: calc(0.5rem * calc(1 - var(--tw-space-x-reverse)));
+}
 .overflow-hidden {
 	overflow: hidden;
+}
+.break-all {
+	word-break: break-all;
 }
 .rounded-md {
 	border-radius: 0.375rem;
 }
 .rounded {
 	border-radius: 0.25rem;
+}
+.rounded-lg {
+	border-radius: 0.5rem;
 }
 .rounded-l-md {
 	border-top-left-radius: 0.375rem;
@@ -1040,6 +1119,9 @@ select {
 .border-r {
 	border-right-width: 1px;
 }
+.border-none {
+	border-style: none;
+}
 .border-gray-300 {
 	--tw-border-opacity: 1;
 	border-color: rgba(209, 213, 219, var(--tw-border-opacity));
@@ -1054,6 +1136,10 @@ select {
 }
 .border-transparent {
 	border-color: transparent;
+}
+.border-yellow-300 {
+	--tw-border-opacity: 1;
+	border-color: rgba(252, 211, 77, var(--tw-border-opacity));
 }
 .border-gray-400 {
 	--tw-border-opacity: 1;
@@ -1075,15 +1161,47 @@ select {
 	--tw-bg-opacity: 1;
 	background-color: rgba(238, 242, 255, var(--tw-bg-opacity));
 }
+.bg-transparent {
+	background-color: transparent;
+}
+.bg-yellow-100 {
+	--tw-bg-opacity: 1;
+	background-color: rgba(254, 243, 199, var(--tw-bg-opacity));
+}
 .bg-gray-800 {
 	--tw-bg-opacity: 1;
 	background-color: rgba(31, 41, 55, var(--tw-bg-opacity));
 }
+.bg-gradient-to-t {
+	background-image: linear-gradient(to top, var(--tw-gradient-stops));
+}
+.from-gray-700 {
+	--tw-gradient-from: #374151;
+	--tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to, rgba(55, 65, 81, 0));
+}
+.from-black {
+	--tw-gradient-from: #000;
+	--tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to, rgba(0, 0, 0, 0));
+}
+.from-black\/60 {
+	--tw-gradient-from: rgba(0, 0, 0, 0.6);
+	--tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to, rgba(0, 0, 0, 0));
+}
 .fill-current {
 	fill: currentColor;
 }
+.object-cover {
+	-o-object-fit: cover;
+	   object-fit: cover;
+}
 .p-6 {
 	padding: 1.5rem;
+}
+.p-0 {
+	padding: 0px;
+}
+.p-3 {
+	padding: 0.75rem;
 }
 .p-2 {
 	padding: 0.5rem;
@@ -1120,9 +1238,17 @@ select {
 	padding-left: 0.25rem;
 	padding-right: 0.25rem;
 }
+.px-3 {
+	padding-left: 0.75rem;
+	padding-right: 0.75rem;
+}
 .py-6 {
 	padding-top: 1.5rem;
 	padding-bottom: 1.5rem;
+}
+.py-5 {
+	padding-top: 1.25rem;
+	padding-bottom: 1.25rem;
 }
 .pt-8 {
 	padding-top: 2rem;
@@ -1151,6 +1277,12 @@ select {
 .pb-1 {
 	padding-bottom: 0.25rem;
 }
+.pt-5 {
+	padding-top: 1.25rem;
+}
+.pb-2 {
+	padding-bottom: 0.5rem;
+}
 .text-center {
 	text-align: center;
 }
@@ -1165,6 +1297,10 @@ select {
 	font-size: 1.125rem;
 	line-height: 1.75rem;
 }
+.text-4xl {
+	font-size: 2.25rem;
+	line-height: 2.5rem;
+}
 .text-xl {
 	font-size: 1.25rem;
 	line-height: 1.75rem;
@@ -1173,21 +1309,17 @@ select {
 	font-size: 1rem;
 	line-height: 1.5rem;
 }
-.text-xs {
-	font-size: 0.75rem;
-	line-height: 1rem;
-}
-.text-3xl {
-	font-size: 1.875rem;
-	line-height: 2.25rem;
-}
-.text-4xl {
-	font-size: 2.25rem;
-	line-height: 2.5rem;
+.text-2xl {
+	font-size: 1.5rem;
+	line-height: 2rem;
 }
 .text-5xl {
 	font-size: 3rem;
 	line-height: 1;
+}
+.text-xs {
+	font-size: 0.75rem;
+	line-height: 1rem;
 }
 .font-medium {
 	font-weight: 500;
@@ -1210,6 +1342,12 @@ select {
 .leading-tight {
 	line-height: 1.25;
 }
+.leading-3 {
+	line-height: .75rem;
+}
+.leading-relaxed {
+	line-height: 1.625;
+}
 .tracking-widest {
 	letter-spacing: 0.1em;
 }
@@ -1224,6 +1362,10 @@ select {
 	--tw-text-opacity: 1;
 	color: rgba(55, 65, 81, var(--tw-text-opacity));
 }
+.text-gray-600 {
+	--tw-text-opacity: 1;
+	color: rgba(75, 85, 99, var(--tw-text-opacity));
+}
 .text-gray-200 {
 	--tw-text-opacity: 1;
 	color: rgba(229, 231, 235, var(--tw-text-opacity));
@@ -1236,13 +1378,13 @@ select {
 	--tw-text-opacity: 1;
 	color: rgba(156, 163, 175, var(--tw-text-opacity));
 }
-.text-gray-600 {
-	--tw-text-opacity: 1;
-	color: rgba(75, 85, 99, var(--tw-text-opacity));
-}
 .text-gray-900 {
 	--tw-text-opacity: 1;
 	color: rgba(17, 24, 39, var(--tw-text-opacity));
+}
+.text-blue-600 {
+	--tw-text-opacity: 1;
+	color: rgba(37, 99, 235, var(--tw-text-opacity));
 }
 .text-indigo-600 {
 	--tw-text-opacity: 1;
@@ -1252,6 +1394,10 @@ select {
 	--tw-text-opacity: 1;
 	color: rgba(220, 38, 38, var(--tw-text-opacity));
 }
+.text-green-600 {
+	--tw-text-opacity: 1;
+	color: rgba(5, 150, 105, var(--tw-text-opacity));
+}
 .text-gray-800 {
 	--tw-text-opacity: 1;
 	color: rgba(31, 41, 55, var(--tw-text-opacity));
@@ -1260,17 +1406,13 @@ select {
 	--tw-text-opacity: 1;
 	color: rgba(67, 56, 202, var(--tw-text-opacity));
 }
+.text-red-700 {
+	--tw-text-opacity: 1;
+	color: rgba(185, 28, 28, var(--tw-text-opacity));
+}
 .text-white {
 	--tw-text-opacity: 1;
 	color: rgba(255, 255, 255, var(--tw-text-opacity));
-}
-.text-green-600 {
-	--tw-text-opacity: 1;
-	color: rgba(5, 150, 105, var(--tw-text-opacity));
-}
-.text-blue-600 {
-	--tw-text-opacity: 1;
-	color: rgba(37, 99, 235, var(--tw-text-opacity));
 }
 .underline {
 	text-decoration: underline;
@@ -1324,6 +1466,11 @@ select {
 	transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 	transition-duration: 150ms;
 }
+.transition-opacity {
+	transition-property: opacity;
+	transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+	transition-duration: 150ms;
+}
 .duration-150 {
 	transition-duration: 150ms;
 }
@@ -1346,6 +1493,10 @@ select {
 	--tw-border-opacity: 1;
 	border-color: rgba(209, 213, 219, var(--tw-border-opacity));
 }
+.hover\:border-gray-600:hover {
+	--tw-border-opacity: 1;
+	border-color: rgba(75, 85, 99, var(--tw-border-opacity));
+}
 .hover\:bg-gray-100:hover {
 	--tw-bg-opacity: 1;
 	background-color: rgba(243, 244, 246, var(--tw-bg-opacity));
@@ -1366,6 +1517,10 @@ select {
 	--tw-text-opacity: 1;
 	color: rgba(156, 163, 175, var(--tw-text-opacity));
 }
+.hover\:text-blue-900:hover {
+	--tw-text-opacity: 1;
+	color: rgba(30, 58, 138, var(--tw-text-opacity));
+}
 .hover\:text-gray-900:hover {
 	--tw-text-opacity: 1;
 	color: rgba(17, 24, 39, var(--tw-text-opacity));
@@ -1377,10 +1532,6 @@ select {
 .hover\:text-gray-700:hover {
 	--tw-text-opacity: 1;
 	color: rgba(55, 65, 81, var(--tw-text-opacity));
-}
-.hover\:text-blue-900:hover {
-	--tw-text-opacity: 1;
-	color: rgba(30, 58, 138, var(--tw-text-opacity));
 }
 .hover\:underline:hover {
 	text-decoration: underline;
@@ -1445,6 +1596,11 @@ select {
 	--tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(3px + var(--tw-ring-offset-width)) var(--tw-ring-color);
 	box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
 }
+.focus\:ring-0:focus {
+	--tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
+	--tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(0px + var(--tw-ring-offset-width)) var(--tw-ring-color);
+	box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
+}
 .focus\:ring-indigo-200:focus {
 	--tw-ring-opacity: 1;
 	--tw-ring-color: rgba(199, 210, 254, var(--tw-ring-opacity));
@@ -1470,6 +1626,9 @@ select {
 }
 .disabled\:opacity-25:disabled {
 	opacity: 0.25;
+}
+.group:hover .group-hover\:opacity-100 {
+	opacity: 1;
 }
 @media (min-width: 640px) {
 
@@ -1506,20 +1665,20 @@ select {
 		height: 5rem;
 	}
 
-	.sm\:max-w-md {
-		max-width: 28rem;
-	}
-
-	.sm\:max-w-sm {
-		max-width: 24rem;
-	}
-
 	.sm\:max-w-\[26rem\] {
 		max-width: 26rem;
 	}
 
 	.sm\:flex-1 {
 		flex: 1 1 0%;
+	}
+
+	.sm\:grid-cols-3 {
+		grid-template-columns: repeat(3, minmax(0, 1fr));
+	}
+
+	.sm\:grid-cols-2 {
+		grid-template-columns: repeat(2, minmax(0, 1fr));
 	}
 
 	.sm\:items-center {
@@ -1563,6 +1722,10 @@ select {
 
 	.md\:grid-cols-2 {
 		grid-template-columns: repeat(2, minmax(0, 1fr));
+	}
+
+	.md\:grid-cols-3 {
+		grid-template-columns: repeat(3, minmax(0, 1fr));
 	}
 
 	.md\:border-t-0 {
