--- a/public/css/app.css
+++ b/public/css/app.css
@@ -804,20 +804,14 @@ select {
 .top-0 {
 	top: 0px;
 }
-.bottom-0 {
-	bottom: 0px;
-}
-.top-1 {
-	top: 0.25rem;
-}
-.right-1 {
-	right: 0.25rem;
-}
 .top-2 {
 	top: 0.5rem;
 }
 .right-2 {
 	right: 0.5rem;
+}
+.bottom-0 {
+	bottom: 0px;
 }
 .z-0 {
 	z-index: 0;
@@ -829,17 +823,13 @@ select {
 	margin-left: auto;
 	margin-right: auto;
 }
-.my-2 {
-	margin-top: 0.5rem;
-	margin-bottom: 0.5rem;
-}
-.my-3 {
-	margin-top: 0.75rem;
-	margin-bottom: 0.75rem;
-}
 .my-4 {
 	margin-top: 1rem;
 	margin-bottom: 1rem;
+}
+.my-2 {
+	margin-top: 0.5rem;
+	margin-bottom: 0.5rem;
 }
 .ml-3 {
 	margin-left: 0.75rem;
@@ -895,14 +885,11 @@ select {
 .mb-3 {
 	margin-bottom: 0.75rem;
 }
-.-mr-2 {
-	margin-right: -0.5rem;
-}
-.mr-4 {
-	margin-right: 1rem;
-}
 .mr-3 {
 	margin-right: 0.75rem;
+}
+.-mr-2 {
+	margin-right: -0.5rem;
 }
 .block {
 	display: block;
@@ -979,12 +966,6 @@ select {
 .w-6 {
 	width: 1.5rem;
 }
-.w-\[33\%\] {
-	width: 33%;
-}
-.w-1\/3 {
-	width: 33.333333%;
-}
 .max-w-6xl {
 	max-width: 72rem;
 }
@@ -1042,29 +1023,11 @@ select {
 	   -moz-appearance: none;
 	        appearance: none;
 }
-.auto-cols-\[minmax\(200px\2c 1fr\)\] {
-	grid-auto-columns: minmax(200px,1fr);
-}
 .grid-cols-1 {
 	grid-template-columns: repeat(1, minmax(0, 1fr));
 }
-.grid-cols-3 {
-	grid-template-columns: repeat(3, minmax(0, 1fr));
-}
-.grid-cols-\[minmax\(200px\2c 1fr\)\] {
-	grid-template-columns: minmax(200px, 1fr);
-}
-.grid-cols-\[repeat\(auto-fill\2c _minmax\(200px\2c 1fr\)\)\] {
-	grid-template-columns: repeat(auto-fill, _minmax(200px, 1fr));
-}
-.grid-cols-\[repeat\(auto-fill\2c minmax\(200px\2c 1fr\)\)\] {
-	grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
-}
 .grid-cols-\[repeat\(auto-fill\2c minmax\(260px\2c 1fr\)\)\] {
 	grid-template-columns: repeat(auto-fill, minmax(260px, 1fr));
-}
-.flex-row {
-	flex-direction: row;
 }
 .flex-col {
 	flex-direction: column;
@@ -1093,12 +1056,6 @@ select {
 .gap-3 {
 	gap: 0.75rem;
 }
-.gap-5 {
-	gap: 1.25rem;
-}
-.gap-6 {
-	gap: 1.5rem;
-}
 .space-y-5 > :not([hidden]) ~ :not([hidden]) {
 	--tw-space-y-reverse: 0;
 	margin-top: calc(1.25rem * calc(1 - var(--tw-space-y-reverse)));
@@ -1109,15 +1066,15 @@ select {
 	margin-right: calc(2rem * var(--tw-space-x-reverse));
 	margin-left: calc(2rem * calc(1 - var(--tw-space-x-reverse)));
 }
-.space-y-1 > :not([hidden]) ~ :not([hidden]) {
-	--tw-space-y-reverse: 0;
-	margin-top: calc(0.25rem * calc(1 - var(--tw-space-y-reverse)));
-	margin-bottom: calc(0.25rem * var(--tw-space-y-reverse));
-}
 .space-x-2 > :not([hidden]) ~ :not([hidden]) {
 	--tw-space-x-reverse: 0;
 	margin-right: calc(0.5rem * var(--tw-space-x-reverse));
 	margin-left: calc(0.5rem * calc(1 - var(--tw-space-x-reverse)));
+}
+.space-y-1 > :not([hidden]) ~ :not([hidden]) {
+	--tw-space-y-reverse: 0;
+	margin-top: calc(0.25rem * calc(1 - var(--tw-space-y-reverse)));
+	margin-bottom: calc(0.25rem * var(--tw-space-y-reverse));
 }
 .overflow-hidden {
 	overflow: hidden;
@@ -1133,9 +1090,6 @@ select {
 }
 .rounded-lg {
 	border-radius: 0.5rem;
-}
-.rounded-sm {
-	border-radius: 0.125rem;
 }
 .rounded-l-md {
 	border-top-left-radius: 0.375rem;
@@ -1205,6 +1159,10 @@ select {
 	--tw-bg-opacity: 1;
 	background-color: rgba(238, 242, 255, var(--tw-bg-opacity));
 }
+.bg-green-500 {
+	--tw-bg-opacity: 1;
+	background-color: rgba(16, 185, 129, var(--tw-bg-opacity));
+}
 .bg-transparent {
 	background-color: transparent;
 }
@@ -1216,20 +1174,8 @@ select {
 	--tw-bg-opacity: 1;
 	background-color: rgba(31, 41, 55, var(--tw-bg-opacity));
 }
-.bg-green-500 {
-	--tw-bg-opacity: 1;
-	background-color: rgba(16, 185, 129, var(--tw-bg-opacity));
-}
 .bg-gradient-to-t {
 	background-image: linear-gradient(to top, var(--tw-gradient-stops));
-}
-.from-gray-700 {
-	--tw-gradient-from: #374151;
-	--tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to, rgba(55, 65, 81, 0));
-}
-.from-black {
-	--tw-gradient-from: #000;
-	--tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to, rgba(0, 0, 0, 0));
 }
 .from-black\/60 {
 	--tw-gradient-from: rgba(0, 0, 0, 0.6);
@@ -1245,17 +1191,14 @@ select {
 .p-6 {
 	padding: 1.5rem;
 }
-.p-0 {
-	padding: 0px;
-}
 .p-3 {
 	padding: 0.75rem;
 }
+.p-0 {
+	padding: 0px;
+}
 .p-2 {
 	padding: 0.5rem;
-}
-.p-4 {
-	padding: 1rem;
 }
 .px-4 {
 	padding-left: 1rem;
@@ -1293,18 +1236,6 @@ select {
 	padding-left: 0.75rem;
 	padding-right: 0.75rem;
 }
-.py-6 {
-	padding-top: 1.5rem;
-	padding-bottom: 1.5rem;
-}
-.py-5 {
-	padding-top: 1.25rem;
-	padding-bottom: 1.25rem;
-}
-.py-10 {
-	padding-top: 2.5rem;
-	padding-bottom: 2.5rem;
-}
 .py-8 {
 	padding-top: 2rem;
 	padding-bottom: 2rem;
@@ -1335,9 +1266,6 @@ select {
 }
 .pb-1 {
 	padding-bottom: 0.25rem;
-}
-.pt-5 {
-	padding-top: 1.25rem;
 }
 .pb-2 {
 	padding-bottom: 0.5rem;
@@ -1372,6 +1300,10 @@ select {
 	font-size: 1.5rem;
 	line-height: 2rem;
 }
+.text-3xl {
+	font-size: 1.875rem;
+	line-height: 2.25rem;
+}
 .text-5xl {
 	font-size: 3rem;
 	line-height: 1;
@@ -1379,10 +1311,6 @@ select {
 .text-xs {
 	font-size: 0.75rem;
 	line-height: 1rem;
-}
-.text-3xl {
-	font-size: 1.875rem;
-	line-height: 2.25rem;
 }
 .font-medium {
 	font-weight: 500;
@@ -1407,9 +1335,6 @@ select {
 }
 .leading-3 {
 	line-height: .75rem;
-}
-.leading-relaxed {
-	line-height: 1.625;
 }
 .tracking-widest {
 	letter-spacing: 0.1em;
@@ -1469,16 +1394,26 @@ select {
 	--tw-text-opacity: 1;
 	color: rgba(67, 56, 202, var(--tw-text-opacity));
 }
-.text-red-700 {
-	--tw-text-opacity: 1;
-	color: rgba(185, 28, 28, var(--tw-text-opacity));
-}
 .text-white {
 	--tw-text-opacity: 1;
 	color: rgba(255, 255, 255, var(--tw-text-opacity));
 }
+.text-red-700 {
+	--tw-text-opacity: 1;
+	color: rgba(185, 28, 28, var(--tw-text-opacity));
+}
+.text-gray-500\/80 {
+	color: rgba(107, 114, 128, 0.8);
+}
+.text-green-500 {
+	--tw-text-opacity: 1;
+	color: rgba(16, 185, 129, var(--tw-text-opacity));
+}
 .underline {
 	text-decoration: underline;
+}
+.line-through {
+	text-decoration: line-through;
 }
 .antialiased {
 	-webkit-font-smoothing: antialiased;
@@ -1489,6 +1424,12 @@ select {
 }
 .opacity-100 {
 	opacity: 1;
+}
+.opacity-70 {
+	opacity: 0.7;
+}
+.opacity-50 {
+	opacity: 0.5;
 }
 .shadow-sm {
 	--tw-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.05);
@@ -1739,14 +1680,6 @@ select {
 		flex: 1 1 0%;
 	}
 
-	.sm\:grid-cols-3 {
-		grid-template-columns: repeat(3, minmax(0, 1fr));
-	}
-
-	.sm\:grid-cols-2 {
-		grid-template-columns: repeat(2, minmax(0, 1fr));
-	}
-
 	.sm\:items-center {
 		align-items: center;
 	}
@@ -1786,36 +1719,20 @@ select {
 }
 @media (min-width: 768px) {
 
-	.md\:w-full {
-		width: 100%;
-	}
-
-	.md\:w-1\/3 {
-		width: 33.333333%;
-	}
-
 	.md\:w-2\/5 {
 		width: 40%;
+	}
+
+	.md\:w-1\/2 {
+		width: 50%;
 	}
 
 	.md\:grid-cols-2 {
 		grid-template-columns: repeat(2, minmax(0, 1fr));
 	}
 
-	.md\:grid-cols-3 {
-		grid-template-columns: repeat(3, minmax(0, 1fr));
-	}
-
 	.md\:flex-row {
 		flex-direction: row;
-	}
-
-	.md\:flex-col {
-		flex-direction: column;
-	}
-
-	.md\:gap-4 {
-		gap: 1rem;
 	}
 
 	.md\:gap-6 {
